--- a/workspace/day02/.dbeaver/credentials-config.json
+++ b/workspace/day02/.dbeaver/credentials-config.json
@@ -1,1 +1,1 @@
-°ƒd<†Mµê	èRÕ903ÇiVÈBJ—×¾Ut/¹ÅîÔÎÙõá†KeGÐºç&¢'1—ŽÉ²›Æu±°\Ý~Xwµ2ƒA7`îíCDÑ$}ÏL”_íŠN–ÊLhäB­°DœpÆºKóäöº¨ÿ²°ñ$
+ñMT•ÿeÙsú³:âº‰ûóÙê­±	ðˆ(ð×†½B2ÓzGÝ³4ê|R/Ú…n{ÔŠÅæ`üø^Â7Ê³èŒÀä8È€¦XÉ×ê$ÒšÔ\›4¨·â[Yà^†·RÝQ¬ÿŠfh¢ŽVz‘ò´
