--- a/workspace/day03/.dbeaver/project-metadata.json
+++ b/workspace/day03/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/day03(DDL).sql":{"default-datasource":"oracle_thin-193d73cdfe3-4c34cc99e9abadb","default-schema":"HR"}}}
+{"resources":{"Scripts/day03(DDL).sql":{"default-schema":"HR","default-datasource":"oracle_thin-193d73cdfe3-4c34cc99e9abadb"}}}
